update js and html so that webpage displays answers

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,15 @@
-#JavaScript, #ruby, #python, #GO, #Csharp {
-  display: none
+#javaScript {
+  display: none;
+}
+#ruby {
+  display: none;
+}
+#python {
+display: none;
+}
+#go {
+  display: none;
+}
+#csharp {
+  display: none;
 }
